--- a/Page-1.html
+++ b/Page-1.html
@@ -29,7 +29,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Page-1.html" data-home-page-title="Page 1" class="u-body"><header class="u-clearfix u-header u-header" id="sec-a00b"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-a00b"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="148" data-image-height="39">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1" data-image-width="148">
         </a>
